# garmin-connect-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: workout-continuous-run.json  workout-intervals.json
garmin_connect_cli/: cli.py  client.py
garmin_connect_cli/commands/: _output.py  activities.py  auth.py  calendar.py  devices.py  gear.py  goals.py  health.py  plans.py  stats.py  user.py  workouts.py  zones.py
skills/garmin-connect-cli/: SKILL.md
tests/: conftest.py  test_auth.py  test_calendar.py  test_cli.py  test_client.py  test_new_commands.py  test_workouts.py  test_zones.py
