[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-connect-cli"
version = "0.1.0"
description = "CLI for managing Garmin Connect workouts, calendar, and activities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Frank Matheron" }]
keywords = ["garmin", "cli", "running", "workouts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = ["garminconnect"]

[project.urls]
Homepage = "https://github.com/frankmatheron/garmin-connect-cli"
Repository = "https://github.com/frankmatheron/garmin-connect-cli"
Issues = "https://github.com/frankmatheron/garmin-connect-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
garmin = "garmin_connect_cli.cli:main"

[tool.setuptools.packages.find]
include = ["garmin_connect_cli*"]
